--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"unity": "2019.1",
 	"dependencies":
 	{
-	"com.unity.feature.ar": "1.0.0"
+	"com.unity.feature.ar": "1.0.0",
+	"com.unity.textmeshpro": "3.0.6"
 	},
 	"keywords":
 	[
